# portmonit-cli

./: Cargo.toml  README.md  config.toml
.github/workflows/: ai-apply-review.yml  ai-comment.yml  ai-fix.yml  ai-issue-triage.yml  ai-mention.yml  ai-pr-review.yml  rust.yml
data/: ibkr_report.xml
src/: main.rs
src/broker/: GeneralReportParser.rs  mod.rs
src/broker/common/: BrokerReportParserFactory.rs  ReportParser.rs  broker_report_parser_factory.rs  mod.rs  report_parser.rs
src/broker/ibkr/: Constants.rs  Report.rs  ReportParser.rs  mod.rs  report_parser.rs
src/tax/: CurrencyConvertor.rs  currency_convertor.rs  mod.rs
src/tax/ua/: BrokerReportProvider.rs  NationalBank.rs  TaxPolicy.rs  TaxReportGenerator.rs  broker_report_provider.rs  mod.rs  national_bank.rs  tax_policy.rs  tax_report_generator.rs
src/tax/ua/adapters/: BrokerAdapter.rs  IbkrAdapter.rs  broker_adapter.rs  ibkr_adapter.rs  mod.rs
