[package]
name = "portmonit-cli-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mockall = "0.13.0"
regex = "1.11.0"
chrono = "0.4.38"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36"
quick-xml = { version = "0.36.2", features = ["serialize"] }
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.210", features = ["serde_derive", "derive"] }
